<resources>
    <string name="app_name">splash</string>
    <string name="sld">School Location Direct</string>
    <string name="ump">Universitas Muhammadiyah Purwokerto</string>
    <string name="nama">Nama lengkap</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya">Belum punya akun? Daftar!</string>
    <string name="rgsMasuk">Sudah punya akun? Masuk</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="nomor_telphone">Nomor telphone</string>
    <string name="konfirmasi">Konfirmasi password</string>
    <string name="rgsDaftar">Daftar</string>
    <string name="logoNameTxt">School Destination</string>
    <string name="todo">TODO</string>
    <string name="sma">SMA/SMK</string>
    <string name="smp">SMP/MTS</string>
    <string name="sd">SD/MI</string>
    <string name="paud_tk">PAUD/TK</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="www_javacode_bumijawa_com">www.javacode-bumijawa.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dikunjungi">Lokasi pernah dikunjungi</string>
    <string name="lokasi_tersedia">Lokasi tersedia</string>
    <string name="sekolah">Sekolah</string>
</resources>