<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00041C"
    tools:context=".Login">
    <View
        android:id="@+id/topView1"
        android:layout_width="18dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:background="#FFFFFF"
        android:layout_marginEnd="20dp"/>
    <View
        android:id="@+id/topView2"
        android:layout_width="18dp"
        android:layout_height="90dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/topView1"
        android:background="#5AB379" />
    <View
        android:id="@+id/topView3"
        android:layout_width="18dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/topView2"
        android:background="#AC2732" />
    <LinearLayout
        android:id="@+id/kumLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sld"
            android:textColor="#ffff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/ump"
            android:textColor="#ffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kumLogo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="#AC2732"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:startIconDrawable="@drawable/ic_person"
            android:hint="@string/nama">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="#AC2732"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:startIconDrawable="@drawable/ic_username"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="#AC2732"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            app:startIconDrawable="@drawable/ic_email"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:boxStrokeColor="#AC2732"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:startIconDrawable="@drawable/ic_phone"
            android:hint="@string/nomor_telphone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nomor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_pass"
            app:passwordToggleEnabled="true"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:boxStrokeColor="#AC2732"
            android:hint="@string/password">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_pass"
            app:passwordToggleEnabled="true"
            android:paddingTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:boxStrokeColor="#AC2732"
            android:hint="@string/konfirmasi">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passKonfir"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/bottomView1"
        android:layout_width="18dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:background="#FFFFFF" />
    <View
        android:id="@+id/bottomView2"
        android:layout_width="18dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/bottomView1"
        android:background="#5AB379" />
    <View
        android:id="@+id/bottomView3"
        android:layout_width="18dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/bottomView2"
        android:background="#AC2732" />

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/inputLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/anton"
        android:text="@string/rgsDaftar"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="#F1F1F1"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btnRegis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:text="@string/rgsMasuk"
        android:textAllCaps="false"
        android:textColor="#F1F1F1"
        android:textSize="15sp"
        android:fontFamily="@font/anton"/>

</RelativeLayout>