<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00041C"
    tools:context=".MainActivity">
  <View
      android:id="@+id/topView1"
      android:layout_width="18dp"
      android:layout_height="120dp"
      android:layout_alignParentEnd="true"
      android:background="#FFFFFF"
      android:layout_marginEnd="20dp"/>

  <View
      android:visibility="invisible"
      android:id="@+id/topView2"
      android:layout_width="18dp"
      android:layout_height="90dp"
      android:layout_marginEnd="20dp"
      android:layout_toStartOf="@+id/topView1"
      android:background="#5AB379" />

  <View
      android:visibility="invisible"
      android:id="@+id/topView3"
      android:layout_width="18dp"
      android:layout_height="60dp"
      android:layout_marginEnd="20dp"
      android:layout_toStartOf="@+id/topView2"
      android:background="#AC2732" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_centerInParent="true"
      android:orientation="vertical">
    <ImageView
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:id="@+id/logo"
        android:src="@drawable/ic_logo"
        android:contentDescription="@string/app_name" />
    <TextView
        android:visibility="invisible"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sld"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#ffff"/>
    <TextView
        android:visibility="invisible"
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ump"
        android:layout_marginTop="3dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="#ffff"/>

  </LinearLayout>

  <View
      android:id="@+id/bottomView1"
      android:layout_width="18dp"
      android:layout_height="120dp"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="20dp"
      android:background="#FFFFFF" />

  <View
      android:visibility="invisible"
      android:id="@+id/bottomView2"
      android:layout_width="18dp"
      android:layout_height="90dp"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="20dp"
      android:layout_toEndOf="@+id/bottomView1"
      android:background="#5AB379" />

  <View
      android:visibility="invisible"
      android:id="@+id/bottomView3"
      android:layout_width="18dp"
      android:layout_height="60dp"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="20dp"
      android:layout_toEndOf="@+id/bottomView2"
      android:background="#AC2732" />

  </RelativeLayout>