<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@mipmap/ic_menu" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="111dp"
        android:layout_height="116dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@id/txtLogo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/anton"
        android:text="@string/logoNameTxt"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/anton"
        android:text="@string/ump"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLogo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgMenu1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_tk"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtMenu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgMenu1"
                    android:layout_centerHorizontal="true"
                    android:text="@string/paud_tk"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgMenu2"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_sd"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtMenu2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgMenu2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sd"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgMenu3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_smp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtMenu3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgMenu3"
                    android:layout_centerHorizontal="true"
                    android:text="@string/smp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgMenu4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentEnd="false"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ic_sma"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/txtMenu4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgMenu4"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sma"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>